--- a/EcoTrack/package.json
+++ b/EcoTrack/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0"
   }
 }
