--- a/Ecotrack/package.json
+++ b/Ecotrack/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage":"https://github.com/LoganElmore/Ecotrack",
   "name": "ecotrack",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo export:web",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -24,7 +27,8 @@
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "gh-pages": "^5.0.0"
   },
-  "private": true
+  "private": false
 }
