--- a/Ecotrack/package.json
+++ b/Ecotrack/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/LoganElmore/Ecotrack",
+  "homepage": "https://github.com/LoganElmore/Ecotrack",
   "name": "ecotrack",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
@@ -24,6 +24,7 @@
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
